# simpath4

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Simpath4.txt  how-to-git.docx  licensing-guide.docx  phase3_extension.docx  run.sh  setup.sh  simpath4.sh
.github/workflows/: release.yml
engine/: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
engine/license/: FeatureGate.cpp  FeatureGate.h  LicenseManager.cpp  LicenseManager.h  MachineId.cpp  MachineId.h
engine/map/: GridMap.cpp  GridMap.h  MapType.h
engine/planner/: IPathPlanner.h  PlannerRegistry.cpp  PlannerRegistry.h  PythonAdapter.cpp  PythonAdapter.h
engine/server/: MessageProtocol.h  WsServer.cpp
engine3d/: CMakeLists.txt  Engine3D.cpp  Engine3D.h  GridMap3D.cpp  GridMap3D.h  main3d.cpp
engine3d/server/: WsServer.h
gui/: blocked.html  index.html  package-lock.json  package.json  splash.html  tsconfig.electron.json  vite.config.ts
gui/electron/: licenseCheck.ts  main.ts  preload.ts
gui/src/: App.tsx  index.css
gui/src/api/: engineApi.ts  engineApi3D.ts  stateStore.ts
gui/src/canvas/: MapCanvas.tsx  MapCanvas3D.tsx
gui/src/licensing/: useElectronUpdater.ts
gui/src/licensing/components/: ElectronUpdateBanner.tsx  LicenseDialog.tsx
gui/src/panels/: AlgorithmPanel.tsx  ControlPanel.tsx  Panel3D.tsx  PluginPanel.tsx
gui/src/types/: SimState.ts
licensing/gui/src/: LicenseManager.ts  UpdateChecker.ts
licensing/gui/src/components/: LicenseDialog.tsx  UpdateBanner.tsx
licensing/python/: __init__.py  license_check.py  machine_id.py  update_check.py
methods/: A_Star.py  Boundary.py  D_Star.py  RBoundry.py  _PRM.py  _dl_augmented_a_star.py  d_star.py  prm.py
methods3d/: A_Star_3D.py
